<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_shoutbox">

    <fragment
        android:id="@+id/navigation_shoutbox"
        android:name="com.example.disasternet.ui.shoutbox.ShoutboxFragment"
        android:label="@string/title_shoutbox"
        tools:layout="@layout/fragment_shoutbox" />

    <fragment
        android:id="@+id/navigation_nearby"
        android:name="com.example.disasternet.ui.nearby.NearbyFragment"
        android:label="@string/title_nearby"
        tools:layout="@layout/fragment_nearby" />

    <fragment
        android:id="@+id/navigation_sos"
        android:name="com.example.disasternet.ui.sos.SosFragment"
        android:label="@string/title_sos"
        tools:layout="@layout/fragment_sos" />
</navigation>