<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.sos.SosFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/button_sos"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="@color/emergency_red"
        app:cardCornerRadius="125dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sos_button_text"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sos_instructions"
        android:layout_below="@id/button_sos"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/text_gps_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gps_status_acquiring"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"/>

</RelativeLayout>